modifica da "comunità" a "community"

--- a/community.html
+++ b/community.html
@@ -43,14 +43,14 @@
 
     <main class="home-content">
         <section class="community-section">
-            <h2 class="section-title">Le mie comunità</h2>
+            <h2 class="section-title">Le mie community</h2>
             <div id="myCommunities"></div>
 
-            <h2 class="section-title mt-5">Altre comunità disponibili</h2>
+            <h2 class="section-title mt-5">Altre community disponibili</h2>
             <div id="communityList"></div>
 
             <button class="btn btn-primary mt-4" data-bs-toggle="modal" data-bs-target="#createCommunityModal">
-                Crea nuova comunità
+                Crea nuova community
             </button>
         </section>
     </main>
@@ -65,7 +65,7 @@
                 <h5 class="community-title"></h5>
                 <div class="dropdown">
                     <button class="btn btn-sm btn-transparent" data-bs-toggle="dropdown"
-                        aria-expanded="false" title="Opzioni comunità">
+                        aria-expanded="false" title="Opzioni community">
                         <i class="bi bi-three-dots-vertical"></i>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end"></ul>
@@ -83,7 +83,7 @@
         <div class="modal-dialog">
             <form id="newCommunityForm" class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Crea nuova comunità</h5>
+                    <h5 class="modal-title">Crea nuova community</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
@@ -106,7 +106,7 @@
         <div class="modal-dialog">
             <form id="editCommunityForm" class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Modifica Comunità</h5>
+                    <h5 class="modal-title">Modifica Community</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
@@ -129,7 +129,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content community-details-modal">
                 <div class="modal-header">
-                    <h5 class="modal-title">Dettagli Comunità</h5>
+                    <h5 class="modal-title">Dettagli Community</h5>
                 </div>
                 <div class="modal-body" id="viewCommunityBody"></div>
                 <div class="modal-footer">
@@ -145,7 +145,7 @@
                 <div class="modal-header">
                     <h5 class="modal-title">Conferma eliminazione</h5>
                 </div>
-                <div class="modal-body">Vuoi davvero eliminare questa comunità?</div>
+                <div class="modal-body">Vuoi davvero eliminare questa community?</div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
                     <button type="button" class="btn btn-danger" id="confirmDeleteCommunityBtn">Elimina</button>
