--- a/playlist.html
+++ b/playlist.html
@@ -13,52 +13,94 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<div class="modal fade" id="editPlaylistModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-        <form id="editPlaylistForm" class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Modifica Playlist</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-            <div class="modal-body">
-                <input type="text" id="editPlaylistName" class="form-control mb-2" placeholder="Nome playlist" required>
-                <textarea id="editPlaylistDescription" class="form-control mb-2" placeholder="Descrizione"
-                    rows="2"></textarea>
-                <input type="text" id="editPlaylistTags" class="form-control mb-2"
-                    placeholder="Tag (separati da virgola)">
-            </div>
-            <div class="modal-footer">
-                <button type="submit" class="btn btn-success">Salva modifiche</button>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
-            </div>
-        </form>
-    </div>
-</div>
-
-
-<div class="modal fade" id="addTrackModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
-        <form id="addTrackForm" class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Aggiungi brano</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-            <div class="modal-body">
-                <input type="text" id="modalTrackTitle" class="form-control mb-2" placeholder="Titolo" required>
-                <input type="text" id="modalTrackArtist" class="form-control mb-2" placeholder="Artista" required>
-                <input type="text" id="modalTrackDuration" class="form-control mb-2" placeholder="Durata (es. 3:45)">
-                <input type="number" id="modalTrackYear" class="form-control mb-2" placeholder="Anno di pubblicazione">
-            </div>
-            <div class="modal-footer">
-                <button type="submit" class="btn btn-success">Aggiungi</button>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
-            </div>
-        </form>
-    </div>
-</div>
-
-
 <body>
+
+    <!--MODIFICA PLAYLIST -->
+    <div class="modal fade" id="editPlaylistModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <form id="editPlaylistForm" class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modifica Playlist</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+
+                <div class="modal-body">
+                    <input type="text" id="editPlaylistName" class="form-control mb-2" placeholder="Nome playlist"
+                        required>
+                    <textarea id="editPlaylistDescription" class="form-control mb-2" placeholder="Descrizione"
+                        rows="2"></textarea>
+                    <input type="text" id="editPlaylistTags" class="form-control mb-2"
+                        placeholder="Tag (separati da virgola)">
+
+                    <h5 class="mt-3">Brani nella playlist</h5>
+                    <ul id="editPlaylistTracks" class="list-group"></ul>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-success">Salva modifiche</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!--AGGIUNGI BRANO MANUALE (NON PER PLAYLIST) -->
+    <div class="modal fade" id="addTrackModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <form id="addTrackForm" class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Aggiungi brano</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+
+                <div class="modal-body">
+                    <input type="text" id="modalTrackTitle" class="form-control mb-2" placeholder="Titolo" required>
+                    <input type="text" id="modalTrackArtist" class="form-control mb-2" placeholder="Artista" required>
+                    <input type="text" id="modalTrackDuration" class="form-control mb-2"
+                        placeholder="Durata (es. 3:45)">
+                    <input type="number" id="modalTrackYear" class="form-control mb-2"
+                        placeholder="Anno di pubblicazione">
+                </div>
+
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-success">Aggiungi</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- AGGIUNGI A PLAYLIST -->
+    <div class="modal fade" id="playlistModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title">Aggiungi alla playlist</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+
+                <div class="modal-body">
+                    <p id="modalTrackName" class="fw-bold"></p>
+
+                    <label class="form-label">Seleziona playlist</label>
+                    <select id="playlistSelect" class="form-select mb-3"></select>
+
+                    <hr>
+
+                    <label class="form-label">Oppure crea una nuova playlist</label>
+                    <input type="text" id="newPlaylistName" class="form-control" placeholder="Nome nuova playlist">
+                </div>
+
+                <div class="modal-footer">
+                    <button class="btn btn-success" onclick="addTrackToPlaylist()">Aggiungi</button>
+                    <button class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+ 
     <header class="home-header">
         <div class="header-top">
             <div class="logo-container">
@@ -75,32 +117,30 @@
     <main>
         <section class="playlist-section container mt-5">
             <div class="row">
-                <!--Colonna: Le mie playlist-->
+
                 <div class="col-md-6">
                     <h2 class="section-title">Le mie playlist</h2>
                     <div id="myPlaylists"></div>
-                    <!-- <h4 class="mt-4">Crea nuova playlist</h4> -->
                     <button class="btn btn-primary btn-create-playlist" data-bs-toggle="modal"
                         data-bs-target="#createPlaylistModal">Crea Playlist</button>
                 </div>
-                <!-- Colonna: Playlist delle community -->
+
                 <div class="col-md-6">
                     <h2 class="section-title">Playlist delle Community</h2>
                     <div id="communityPlaylists"></div>
                 </div>
 
             </div>
-
         </section>
     </main>
 
+    <!-- template card playlist -->
     <template id="playlistCardTemplate">
         <div class="playlist-card">
             <div class="playlist-header">
                 <h5 class="playlist-title"></h5>
                 <div class="dropdown">
-                    <button class="btn btn-sm btn-transparent" data-bs-toggle="dropdown" aria-expanded="false"
-                        title="Opzioni playlist">
+                    <button class="btn btn-sm btn-transparent" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="bi bi-three-dots-vertical"></i>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end">
@@ -112,14 +152,7 @@
         </div>
     </template>
 
-
-    <footer>
-        <p>&copy; 2025 SN4M - Social Network for Music</p>
-    </footer>
-
-    <script src="auth.js"></script>
-    <script src="playlist.js"></script>
-
+    <!-- CREA PLAYLIST -->
     <div class="modal fade" id="createPlaylistModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <form id="newPlaylistForm" class="modal-content">
@@ -127,6 +160,7 @@
                     <h5 class="modal-title">Nuova Playlist</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
+
                 <div class="modal-body">
                     <input type="text" id="playlistName" class="form-control mb-2" placeholder="Nome playlist" required>
                     <textarea id="playlistDescription" class="form-control mb-2" placeholder="Descrizione playlist"
@@ -134,15 +168,16 @@
                     <input type="text" id="playlistTags" class="form-control mb-2"
                         placeholder="Tag (separati da virgola)" required>
                 </div>
+
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-success"> Crea</button>
+                    <button type="submit" class="btn btn-success">Crea</button>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
                 </div>
             </form>
         </div>
     </div>
 
-
+    <!-- CONFERMA ELIMINAZIONE -->
     <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content custom-modal">
@@ -158,6 +193,7 @@
         </div>
     </div>
 
+    <!-- DETTAGLI PLAYLIST -->
     <div class="modal fade" id="viewPlaylistModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content playlist-details-modal">
@@ -180,6 +216,10 @@
             </div>
         </div>
     </div>
+
+    <script src="auth.js"></script>
+    <script src="playlist.js"></script>
+
 </body>
 
 </html>
