--- a/community.html
+++ b/community.html
@@ -9,7 +9,8 @@
     <link rel="icon" type="image/png" href="logo1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="community.css">
+    <link rel="stylesheet" href="global.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
@@ -41,7 +42,7 @@
         </nav>
     </header>
 
-    <main class="home-content">
+    <main class="community-content">
         <section class="community-section">
             <h2 class="section-title">Le mie community</h2>
             <div id="myCommunities"></div>
