--- a/home.html
+++ b/home.html
@@ -8,7 +8,8 @@
     <title>SN4M - Home</title>
     <link rel="icon" type="image/png" href="logo1.png">   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="global.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
