--- a/playlist.html
+++ b/playlist.html
@@ -9,13 +9,14 @@
     <link rel="icon" type="image/png" href="logo1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="playlist.css">
+    <link rel="stylesheet" href="global.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
 
-    <!--MODIFICA PLAYLIST -->
+    <!--modifica playlist -->
     <div class="modal fade" id="editPlaylistModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <form id="editPlaylistForm" class="modal-content">
@@ -44,7 +45,7 @@
         </div>
     </div>
 
-    <!--AGGIUNGI BRANO MANUALE (NON PER PLAYLIST) -->
+    <!--aggiungi brano manuale (non per playlist) -->
     <div class="modal fade" id="addTrackModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <form id="addTrackForm" class="modal-content">
@@ -70,7 +71,7 @@
         </div>
     </div>
 
-    <!-- AGGIUNGI A PLAYLIST -->
+    <!-- aggiungi a playlist -->
     <div class="modal fade" id="playlistModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -152,7 +153,7 @@
         </div>
     </template>
 
-    <!-- CREA PLAYLIST -->
+    <!-- crea playlist -->
     <div class="modal fade" id="createPlaylistModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <form id="newPlaylistForm" class="modal-content">
@@ -163,10 +164,8 @@
 
                 <div class="modal-body">
                     <input type="text" id="playlistName" class="form-control mb-2" placeholder="Nome playlist" required>
-                    <textarea id="playlistDescription" class="form-control mb-2" placeholder="Descrizione playlist"
-                        rows="2" required></textarea>
-                    <input type="text" id="playlistTags" class="form-control mb-2"
-                        placeholder="Tag (separati da virgola)" required>
+                    <textarea id="playlistDescription" class="form-control mb-2" placeholder="Descrizione playlist" rows="2" required></textarea>
+                    <input type="text" id="playlistTags" class="form-control mb-2" placeholder="Tag (separati da virgola)" required>
                 </div>
 
                 <div class="modal-footer">
