--- a/profilo.html
+++ b/profilo.html
@@ -8,7 +8,8 @@
     <title>SN4M - Profilo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="logo1.png">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="global.css">
     
 </head>
 
