modifica nome da "home-header" a "global-content"

--- a/community.html
+++ b/community.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="home-header">
+    <header class="global-header">
         <div class="header-top">
             <div class="logo-container">
                 <a href="home.html"><img src="logo1.png" alt="logo SN4M" class="image"></a>
