--- a/home.html
+++ b/home.html
@@ -6,63 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SN4M - Home</title>
-    <link rel="icon" type="image/png" href="logo1.png">   
+
+    <link rel="icon" type="image/png" href="logo1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="global.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <header class="global-header">
-        <div class="header-top">
-            <div class="logo-container">
-                <a href="home.html"><img src="logo1.png" alt="logo SN4M" class="image"></a>
-                <a href="home.html" class="app-name">SN4M</a>
-            </div>
 
-            <form id="search-form"> <input type="text" id="search-input" placeholder="Cerca...">
-                <button type="submit" id="search-button">
-                    <span class="icon">
-                        <ion-icon name="search"></ion-icon>
-                    </span>
-                </button>
-            </form>
-
-            <div class="user-welcome">
-                <p>Ciao, <span id="welcomeUsername"></span>!</p>
-                <button id="logoutBtn">Logout</button>
-            </div>
-        </div>
-        <nav class="navbar"> 
-            <a href="playlist.html">Playlist</a>
-            <a href="community.html">Community</a>
-            <a href="profilo.html">Profilo</a>
-        </nav>
-    </header>
+    <!-- header globale -->
+    <div id="global-header"></div>
 
     <main class="home-content">
+
+        <!-- carosello -->
         <section class="music-section">
             <h2>Le tue preferenze</h2>
+
             <div class="music-container">
                 <button class="music-left">&#10094;</button>
+
                 <div class="music-viewport">
                     <div class="music-track" id="musicTrack">
-                        <!-- Card musicali generate da js-->
-                         
+                        <!-- Card musicali generate da home.js -->
                     </div>
                 </div>
+
                 <button class="music-right">&#10095;</button>
             </div>
-            <div id="spotifyResults"></div>
-
         </section>
 
-        <section class="feed">
-            <h2>Feed di Attività</h2>
-            <p>Qui potrai vedere gli ultimi aggiornamenti dei tuoi amici e le nuove uscite musicali.</p>
-        </section>
 
     </main>
 
@@ -70,42 +48,17 @@
         <p>&copy; 2025 SN4M - Social Network for Music</p>
     </footer>
 
+    <!-- icons -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     <script src="auth.js"></script>
+    <script src="playlist.js"></script>
     <script type="module" src="home.js"></script>
     <script src="api.js"></script>
 
-    <div class="modal fade" id="playlistModal" tabindex="-1" aria-labelledby="playlistModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="playlistModalLabel">Aggiungi a Playlist</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
-                </div>
-                <div class="modal-body">
-                    <p id="modalTrackName"></p>
-                    <select id="playlistSelect" class="form-select mb-3"></select>
-                    <input type="text" id="newPlaylistName" class="form-control"
-                        placeholder="Oppure crea nuova playlist">
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
-                    <button type="button" class="btn btn-primary" id="confirmAddBtn">Aggiungi</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-        <div id="sn4mToast" class="toast align-items-center text-white bg-success border-0" role="alert"
-            aria-live="assertive" aria-atomic="true">
-            <div class="d-flex">
-                <div class="toast-body" id="toastMessage">Brano aggiunto!</div>
-                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
-            </div>
-        </div>
-    </div>
+    <!-- header +  ricerca -->
+    <script type="module" src="load-header.js"></script>
 
 </body>
 
