--- a/playlist.html
+++ b/playlist.html
@@ -43,7 +43,7 @@
 
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-success">Salva modifiche</button>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
                 </div>
             </form>
         </div>
@@ -167,8 +167,6 @@
         </div>
     </div>
 
-
-    <script src="auth.js"></script>
     <script src="playlist.js"></script>
     <script src="api.js"></script>
     
